@@ -600,14 +600,14 @@
               </config>
             </TCEforms>
           </profilelist.options.recursive>
-          <profilelist.charbrowser>
+          <profilelist.profile.charbrowser>
             <TCEforms>
               <label>LLL:EXT:cfc_league_fe/locallang_db.xml:plugin_common_charbrowser</label>
               <config>
                 <type>check</type>
               </config>
             </TCEforms>
-          </profilelist.charbrowser>
+          </profilelist.profile.charbrowser>
           <profilelist.birthdays>
             <TCEforms>
               <exclude>1</exclude>
