@@ -17,6 +17,7 @@
 <!-- ###PROFILE_LIST### begin-->
 <div id="cfcleague-profilelist">
 
+<!-- ###PROFILES### start-->
 <table class="cfcleague-profilelist-pagertable">
 <tr><td colspan="3" class="cfcleague-profilelist-pager">
 <!-- ###CHARBROWSER### begin-->
@@ -25,7 +26,6 @@
 <!-- ###CHARBROWSER### end-->
 </td></tr>
 
-<!-- ###PROFILES### start-->
 <!-- ###PROFILE### start-->
 <tr>
   <td>###PROFILE_SHOWPROFILELINK######PROFILE_LAST_NAME###, ###PROFILE_FIRST_NAME######PROFILE_SHOWPROFILELINK### ###PROFILE_FIRSTPICTURE###</td>
@@ -65,7 +65,6 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 </td></tr>
 <!-- ###PAGEBROWSER### END -->
 
-<!-- ###PROFILES### end-->
 
 <tr><td colspan="3" class="cfcleague-profilelist-pager">
 <!-- ###CHARBROWSER### begin-->
@@ -75,6 +74,8 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 </td></tr>
 
 </table>
+<!-- ###PROFILES### end-->
+
 </div>
 <!-- ###PROFILE_LIST### end-->
 
