@@ -12,6 +12,11 @@ Template for list view
 <!-- ###STADIUM_LIST### begin-->
 
 ###STADIUMS###
+<!-- ###CHARBROWSER### begin-->
+<span class="cfcleague-profilelist-pagerlink">###PB_ITEM_LINK######PB_ITEM######PB_ITEM_LINK###</span>
+<span class="cfcleague-profilelist-pagersize">###PB_ITEM_LINK###(###PB_ITEM_SIZE###)###PB_ITEM_LINK###</span>
+<!-- ###CHARBROWSER### end-->
+
 ###STADIUM###
 <h2>###STADIUM_SHOWLINK######STADIUM_NAME######STADIUM_SHOWLINK###</h2>
 <p>###LABEL_DISTANCE###: ###STADIUM_DISTANCE###
